samples/eventchain/invalid/approval-invalid.verified
1|ApprovalApproved|approvalId=approval-999
